syntax = "proto3";

package api.v1;

service OfferService {
  rpc SubmitOffer(OfferRequest) returns (OfferResponse);
  rpc RequestPresentation(PresentationRequest) returns (PresentationResponse);
}

message OfferRequest {
  string phone = 1;
  string email = 2;
  string city = 3;
  int32 property_count = 4;
  string address = 5;
  string additional_info = 6;
  bool agreed_to_privacy = 7;
}

message OfferResponse {
  bool success = 1;
  string message = 2;
  string request_id = 3;
}

message PresentationRequest {
  string presentation_date = 1;
  string building_type = 2;
  string phone = 3;
  string email = 4;
  string address = 5;
  bool agreed_to_privacy = 6;
}

message PresentationResponse {
  bool success = 1;
  string message = 2;
  string request_id = 3;
}
